--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -2,32 +2,61 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/linearLayout2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".MainActivity"
     tools:showIn="@layout/activity_main">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="262dp"
-        android:layout_height="251dp"
-        android:layout_marginStart="74dp"
-        android:layout_marginTop="66dp"
+    <ImageButton
+        android:id="@+id/ibListMenu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:onClick="goToAnimalsListActivity"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/petjada" />
+        app:srcCompat="@drawable/listmenu" />
+
+    <ImageButton
+        android:id="@+id/ibDicotomicaMenu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:onClick="goToDicotomicActivity"
+        app:layout_constraintStart_toStartOf="@+id/ibListMenu"
+        app:layout_constraintTop_toBottomOf="@+id/ibListMenu"
+        app:srcCompat="@drawable/dicotomicamenu" />
 
     <TextView
-        android:id="@+id/titolApp"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="317dp"
-        android:text="Petjades APP"
+        android:id="@+id/txtListMenu"
+        android:layout_width="185dp"
+        android:layout_height="100dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="109dp"
+        android:text="@string/txtListMenu"
         android:textAlignment="center"
         android:textAllCaps="true"
-        android:textColor="#090808"
-        android:textSize="30sp"
+        android:textColor="#0B0A0A"
+        android:textSize="24sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/txtDicotomicaMenu"
+        android:layout_width="185dp"
+        android:layout_height="100dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="341dp"
+        android:text="@string/txtDicotomicaMenu"
+        android:textAlignment="center"
+        android:textAllCaps="true"
+        android:textColor="#0B0A0A"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
