--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -8,6 +8,16 @@
     android:orientation="horizontal">
 
     <ImageView
+        android:id="@+id/imgBackList"
+        android:layout_width="453dp"
+        android:layout_height="120dp"
+        android:layout_marginTop="5dp"
+        android:scaleType="fitXY"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/fondo" />
+
+    <ImageView
         android:id="@+id/imgAnimal"
         android:layout_width="77dp"
         android:layout_height="80dp"
@@ -41,4 +51,5 @@
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
