--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -7,11 +7,15 @@
         android:orderInCategory="100"
         android:title="@string/txtMenuHome"
         app:showAsAction="never" />
-
     <item
         android:id="@+id/animalList"
         android:orderInCategory="100"
         android:title="@string/txtListMenu"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/dichotomous"
+        android:orderInCategory="100"
+        android:title="@string/txtDichotomousMenu"
         app:showAsAction="never" />
     <item
         android:id="@+id/camera"
