--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -13,7 +13,7 @@
         android:id="@+id/ibListMenu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="50dp"
         android:onClick="goToAnimalsListActivity"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -33,8 +33,8 @@
         android:id="@+id/txtListMenu"
         android:layout_width="185dp"
         android:layout_height="100dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="109dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="144dp"
         android:text="@string/txtListMenu"
         android:textAlignment="center"
         android:textAllCaps="true"
@@ -48,8 +48,8 @@
         android:id="@+id/txtDicotomicaMenu"
         android:layout_width="185dp"
         android:layout_height="100dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="341dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="380dp"
         android:text="@string/txtDichotomousMenu"
         android:textAlignment="center"
         android:textAllCaps="true"
@@ -63,13 +63,13 @@
         android:id="@+id/imageButton"
         android:layout_width="64dp"
         android:layout_height="59dp"
-        android:layout_marginStart="196dp"
-        android:layout_marginTop="468dp"
+        android:layout_marginStart="172dp"
+        android:layout_marginTop="24dp"
         android:backgroundTint="#FAF9F9"
         android:onClick="goToAboutActivity"
         android:scaleType="fitCenter"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ibDicotomicaMenu"
         app:srcCompat="@drawable/info" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
