V7 21/04/2020 Sols falta:  - incorporar imatges caca/rastre.  - incorporar imatges petjades.  - buscador

--- a/app/src/main/res/layout/content_dichotomous_key.xml
+++ b/app/src/main/res/layout/content_dichotomous_key.xml
@@ -36,7 +36,7 @@
         android:layout_marginTop="150dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/gatomontes_petjada" />
+        app:srcCompat="@drawable/lince_petjada" />
 
     <ImageView
         android:id="@+id/imageView2"
