--- a/app/src/main/res/layout/activity_sample_carousel_view.xml
+++ b/app/src/main/res/layout/activity_sample_carousel_view.xml
@@ -9,8 +9,9 @@
 
     <com.synnapps.carouselview.CarouselView
         android:id="@+id/carouselView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clipToPadding="false"
         app:autoPlay="false"
         app:fillColor="#FFFFFFFF"
         app:pageColor="#00000000"
