--- a/app/src/main/res/layout/content_animals_list.xml
+++ b/app/src/main/res/layout/content_animals_list.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="logic.AnimalsListActivity"
+    tools:context="activity.AnimalsListActivity"
     tools:showIn="@layout/activity_animals_list">
 
     <TextView
